# note

./: BUILD  BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  go.sum
cli/: BUILD.bazel  err.go  exec.go  main.go  utils.go
cmd/: BUILD.bazel  main.go
note/: BUILD  BUILD.bazel  core.go  exec.go  files.go  git.go  main.go  utils.go
