load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = [
        "exec.go",
        "main.go",
    ],
    importpath = "github.com/honglu2875/note/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//note",
        "@com_github_muesli_termenv//:termenv",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
